--- a/server/public/index.html
+++ b/server/public/index.html
@@ -6,7 +6,7 @@
     <script src="vendors/jquery-3.3.1.min.js" charset="utf-8"></script>
     <script src="scripts/client.js" charset="utf-8"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <link rel="stylesheet" href="views/styles.css">
+    <link rel="stylesheet" href="views/style.css">
   </head>
   <body>
     <header>
@@ -17,11 +17,11 @@
     </header>
     <section id="addKoala">
       <h2>Add Koala</h2>
-      <input type="text" id="nameIn" value="" placeholder="Name">
-      <input type="text" id="ageIn" value="" placeholder="Age">
-      <input type="text" id="genderIn" value="" placeholder="Gender">
-      <input type="text" id="readyToTransferIn" value="" placeholder="Transfer">
-      <input type="text" id="notesIn" value="" placeholder="Notes">
+      <input class="inputs" type="text" id="nameIn" value="" placeholder="Name">
+      <input class="inputs" type="text" id="ageIn" value="" placeholder="Age">
+      <input class="inputs" type="text" id="genderIn" value="" placeholder="Gender">
+      <input class="inputs" type="text" id="readyToTransferIn" value="" placeholder="Transfer(Y or N)">
+      <input class="inputs" type="text" id="notesIn" value="" placeholder="Notes">
       <button type="button" id="addButton">Add Koala</button>
     </section>
     <section>
@@ -32,7 +32,7 @@
             <th>Name</th>
             <th>Age</th>
             <th>Gender</th>
-            <th>Ready for Transfer</th>
+            <th>Ready for Transfer(Y/N)</th>
             <th>Notes</th>
           </tr>
         </thead>
